fix: solved most warnings